Added connections GET route and updated Swagger
